# space_game_rs

./: .gitignore  Cargo.toml  assets_server.data  rust-toolchain.toml  scene.data
assets/shaders/: opaque_pass.wgsl  opaque_render_pass.wgsl  shadow_pass.wgsl  shadow_render_pass.wgsl  z_pre_pass.wgsl
src/: app.rs  egui_pass.rs  main.rs  opaque_pass.rs  shadow_pass.rs
src/app/: mod.rs
src/asset_server/: asset_id.rs  mod.rs
src/components/: camera.rs  light.rs  mesh.rs  mesh_component.rs  mod.rs  model.rs  transform.rs
src/editor/: asset_browser.rs  debugger.rs  hierarchy.rs  inspector.rs  mod.rs  scene_hierarchy.rs
src/egui/: egui_pass.rs  mod.rs
src/game/: mod.rs  opaque_pass.rs  opaque_render_pass.rs  shadow_pass.rs  shadow_render_pass.rs  z_pre_pass.rs  z_pre_render_pass.rs
src/importing/: gltf.rs  mod.rs
src/rendering/: egui_pass.rs  helpers.rs  light.rs  material.rs  mod.rs  model.rs  opaque_pass.rs  renderer.rs  shadow_pass.rs  texture.rs
src/scene/: mod.rs  scene_object.rs
src/test/: mod.rs
src/ui/: mod.rs
