[package]
name = "space_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winit = "0.28"
wgpu = { version = "0.16", features = ["expose-ids"] }
pollster = "0.3"
bytemuck = "1.13"
glam = { version = "0.24", features = ["bytemuck", "serde"] }
gltf = { version = "1.3", features = ["names"] }
fastrand = "2.0"
#serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lz4_flex = { version = "0.11", default-features = false }
#editor
egui = "0.22"
egui-wgpu = { version = "0.22", features = ["winit", "puffin"] }
egui-winit = { version = "0.22", features = ["puffin"] }
puffin_egui = "0.22"
native-dialog = "0.6"
